--- a/src/sass/partials/_faq.sass
+++ b/src/sass/partials/_faq.sass
@@ -41,6 +41,7 @@
 				transition: all .3s
 				bottom: 0
 				width: 100%
+				left: 0
 				height: 2px
 				background-image: $gradient
 			&:hover, &:focus
