--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,5 +22,6 @@ title: Landing Auto
 	{% include "partials/_faq.html" %}
 	{% include "partials/_map.html" %}
 	{% include "partials/_footer.html" %}
+	{% include "partials/_modal.html" %}
 
 {% endblock %}
