--- a/src/templates/partials/_buy-auto.html
+++ b/src/templates/partials/_buy-auto.html
@@ -1,4 +1,4 @@
-<section class="buy-auto">
+<section class="buy-auto" id="buy-auto">
   <div class="container">
     <div class="title">
       <h2>
@@ -71,7 +71,7 @@
               закона и не оказаться в убытке.
             </p>
             <div class="button">
-              <a href="#">
+              <a href="#" class="modal_open">
                 Рассчитать стоимость
               </a>
             </div>
@@ -96,7 +96,7 @@
               закона и не оказаться в убытке.
             </p>
             <div class="button">
-              <a href="#">
+              <a href="#" class="modal_open">
                 Рассчитать стоимость
               </a>
             </div>
@@ -121,7 +121,7 @@
               закона и не оказаться в убытке.
             </p>
             <div class="button">
-              <a href="#">
+              <a href="#" class="modal_open">
                 Рассчитать стоимость
               </a>
             </div>
