--- a/src/templates/partials/_our-profile.html
+++ b/src/templates/partials/_our-profile.html
@@ -1,4 +1,4 @@
-<section class="our-profile">
+<section class="our-profile" id="our-profile">
   <div class="container">
     <div class="title title__our-profile">
       <h2>
