--- a/src/templates/partials/_pay-system.html
+++ b/src/templates/partials/_pay-system.html
@@ -1,4 +1,4 @@
-<section class="pay-system">
+<section class="pay-system" id="pay-system">
   <div class="container">
     <div class="title title__pay-system">
       <h2>
