--- a/src/templates/partials/_reviews.html
+++ b/src/templates/partials/_reviews.html
@@ -74,6 +74,106 @@
                   <img src="img/reviews-1.jpg" alt="">
                   <div class="swiper-slide__title_info">
                     <h4>
+                      Толик Иванов
+                    </h4>
+                    <fieldset class="rating_client">
+                      <input type="radio" id="star5_client" name="rating_client" value="5">
+                      <label class = "full" for="star5_client" title="Великолепно - 5 звезд">
+                      </label>
+                      <input type="radio" id="star4half_client" name="rating_client" value="4 and a half">
+                      <label class="half" for="star4half_client" title="Отлично - 4.5 звезды">
+                      </label>
+                      <input type="radio" id="star4_client" name="rating_client" value="4">
+                      <label class = "full" for="star4_client" title="Очень хорошо - 4 звезды">
+                      </label>
+                      <input type="radio" id="star3half_client" name="rating_client" value="3 and a half">
+                      <label class="half" for="star3half_client" title="Хорошо - 3.5 звезды">
+                      </label>
+                      <input type="radio" id="star3_client" name="rating_client" value="3">
+                      <label class = "full" for="star3_client" title="Нормально - 3 звезды">
+                      </label>
+                      <input type="radio" id="star2half_client" name="rating_client" value="2 and a half">
+                      <label class="half" for="star2half_client" title="Плоховато - 2.5 звезды">
+                      </label>
+                      <input type="radio" id="star2_client" name="rating_client" value="2">
+                      <label class = "full" for="star2_client" title="Плохо - 2 звезды">
+                      </label>
+                      <input type="radio" id="star1half_client" name="rating_client" value="1 and a half">
+                      <label class="half" for="star1half_client" title="Очень плохо - 1.5 звезды">
+                      </label>
+                      <input type="radio" id="star1_client" name="rating_client" value="1">
+                      <label class = "full" for="star1_client" title="Ужасно - 1 здвезда">
+                      </label>
+                      <input type="radio" id="starhalf_client" name="rating_client" value="half">
+                      <label class="half" for="starhalf_client" title="Отвратительно - 0.5 звезды">
+                      </label>
+                    </fieldset>
+                    <data> 2 недели назад</data>
+                  </div>
+                </div>
+                <p>
+                  Мой автомобиль был продан за 1 день.
+                  Не мог поверить, что такое возможно.
+                  Нашел компанию «Автоэксперт» в интернете,
+                  позвонил. Оценили по фото, а уже через час
+                  ко мне приехал оценщик.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__title">
+                  <img src="img/reviews-1.jpg" alt="">
+                  <div class="swiper-slide__title_info">
+                    <h4>
+                      Федоров Иван
+                    </h4>
+                    <fieldset class="rating_client">
+                      <input type="radio" id="star5_client" name="rating_client" value="5">
+                      <label class = "full" for="star5_client" title="Великолепно - 5 звезд">
+                      </label>
+                      <input type="radio" id="star4half_client" name="rating_client" value="4 and a half">
+                      <label class="half" for="star4half_client" title="Отлично - 4.5 звезды">
+                      </label>
+                      <input type="radio" id="star4_client" name="rating_client" value="4">
+                      <label class = "full" for="star4_client" title="Очень хорошо - 4 звезды">
+                      </label>
+                      <input type="radio" id="star3half_client" name="rating_client" value="3 and a half">
+                      <label class="half" for="star3half_client" title="Хорошо - 3.5 звезды">
+                      </label>
+                      <input type="radio" id="star3_client" name="rating_client" value="3">
+                      <label class = "full" for="star3_client" title="Нормально - 3 звезды">
+                      </label>
+                      <input type="radio" id="star2half_client" name="rating_client" value="2 and a half">
+                      <label class="half" for="star2half_client" title="Плоховато - 2.5 звезды">
+                      </label>
+                      <input type="radio" id="star2_client" name="rating_client" value="2">
+                      <label class = "full" for="star2_client" title="Плохо - 2 звезды">
+                      </label>
+                      <input type="radio" id="star1half_client" name="rating_client" value="1 and a half">
+                      <label class="half" for="star1half_client" title="Очень плохо - 1.5 звезды">
+                      </label>
+                      <input type="radio" id="star1_client" name="rating_client" value="1">
+                      <label class = "full" for="star1_client" title="Ужасно - 1 здвезда">
+                      </label>
+                      <input type="radio" id="starhalf_client" name="rating_client" value="half">
+                      <label class="half" for="starhalf_client" title="Отвратительно - 0.5 звезды">
+                      </label>
+                    </fieldset>
+                    <data> 2 недели назад</data>
+                  </div>
+                </div>
+                <p>
+                  Мой автомобиль был продан за 1 день.
+                  Не мог поверить, что такое возможно.
+                  Нашел компанию «Автоэксперт» в интернете,
+                  позвонил. Оценили по фото, а уже через час
+                  ко мне приехал оценщик.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__title">
+                  <img src="img/reviews-1.jpg" alt="">
+                  <div class="swiper-slide__title_info">
+                    <h4>
                       Федоров Иван
                     </h4>
                     <fieldset class="rating_client">
@@ -311,7 +411,7 @@
               </label>
             </fieldset>
             <div class="info-line__button info-line__button_reviews">
-              <a href="#">
+              <a href="#" class="modal_open">
                 <span>
                   Оставить отзыв
                 </span>
