--- a/src/templates/partials/_save-screen.html
+++ b/src/templates/partials/_save-screen.html
@@ -1,4 +1,4 @@
-<section class="save-screen">
+<section class="save-screen" id="save-scereen">
   <div class="container">
     <div class="row">
       <div class="order-2 order-xl-1 col-sm-6 col-xl-3 d-flex justify-content-center justify-content-xl-start">
