--- a/src/templates/partials/_urgent.html
+++ b/src/templates/partials/_urgent.html
@@ -1,4 +1,4 @@
-<section class="urgent">
+<section class="urgent" id="urgent">
   <div class="container">
     <div class="title title__urgent">
       <h2>
