--- a/src/sass/partials/_navigation.sass
+++ b/src/sass/partials/_navigation.sass
@@ -69,7 +69,7 @@
 		position: fixed
 		top: 10px
 		right: 10px
-		background-color: $alabaster
+		background-color: $nav-color
 		border-radius: 50%
 		+r(992)
 			display: block
