--- a/src/sass/partials/_pay-system.sass
+++ b/src/sass/partials/_pay-system.sass
@@ -37,6 +37,7 @@
 				transform: scale(0)
 				transition: all .3s
 				bottom: 0
+				left: 0
 				width: 100%
 				height: 2px
 				background-image: $gradient
