--- a/src/templates/partials/_autoexpress-screen.html
+++ b/src/templates/partials/_autoexpress-screen.html
@@ -10,7 +10,7 @@
     </div>
     <div class="autoexpress__wrapper">
       <div class="button">
-        <a href="#">
+        <a href="#" class="modal_open">
           отправить заявку
         </a>
       </div>
