--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container">
     <div class="footer__wrapper">
       <div class="footer__logo">
@@ -17,14 +17,17 @@
           Меню
         </h3>
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Выкуп авто</a></li>
-          <li><a href="#">О компании</a></li>
-          <li><a href="#">Онлайн-оценка авто</a></li>
-          <li><a href="#">Статьи</a></li>
-          <li><a href="#">Автовыкуп в Москве</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="#home">Главная</a></li>
+
+          <li><a href="#our-profile">Наш профиль</a></li>
+          <li><a href="#pay-system">Система оплаты</a></li>
+          <li><a href="#buy-auto">Выкуп авто</a></li>
+
+          <li><a href="#urgent">Автовыкуп в Москве</a></li>
+
+          <li><a href="#clients">Отзывы</a></li>
+          <li><a href="#save-scereen">Онлайн-оценка авто</a></li>
+          <li><a href="#footer">Контакты</a></li>
         </ul>
       </div>
       <div class="footer__contacts">
