--- a/src/templates/partials/_header-screen.html
+++ b/src/templates/partials/_header-screen.html
@@ -13,7 +13,7 @@
       </p>
     </div>
     <div class="button">
-      <a href="#">
+      <a href="#" class="modal_open">
         оценить автомобиль
       </a>
     </div>
