--- a/src/templates/partials/_info-line.html
+++ b/src/templates/partials/_info-line.html
@@ -1,4 +1,4 @@
-<div class="info-line">
+<div class="info-line" id="home">
   <div class="container">
     <div class="info-line__wrapper">
       <div class="logo">
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="info-line__button">
-        <a href="#">
+        <a href="#" class="modal_open">
           <span>
             бесплатная консультация
           </span>
