--- a/src/templates/partials/_navigation.html
+++ b/src/templates/partials/_navigation.html
@@ -7,17 +7,17 @@
 <nav class="nav">
   <div class="container">
     <ul>
-      <li><a href="#">Главная</a></li>
-      <li><a href="#">Выкуп авто</a></li>
-      <li><a href="#">Онлайн-оценка авто</a></li>
-      <li><a href="#">Автовыкуп в Москве</a></li>
-      <li><a href="#">Услуги</a></li>
-      <li><a href="#">О компании</a></li>
-      <li><a href="#">Статьи</a></li>
-      <li><a href="#">Контакты</a></li>
+      <li><a href="#home">Главная</a></li>
+      <li><a href="#buy-auto">Выкуп авто</a></li>
+      <li><a href="#our-profile">Наш профиль</a></li>
+      <li><a href="#pay-system">Система оплаты</a></li>
+      <li><a href="#save-scereen">Онлайн-оценка авто</a></li>
+      <li><a href="#urgent">Автовыкуп в Москве</a></li>
+      <li><a href="#clients">Отзывы</a></li>
+      <li><a href="#footer">Контакты</a></li>
     </ul>
     <div class="info-line__button">
-      <a href="#">
+      <a href="#" class="modal_open">
         <span> бесплатная консультация </span>
       </a>
     </div>
